# collaborativestatemachines.github.io

./: 404.html  index.html  mkdocs.yml  pyproject.toml  refs.bib  sitemap.xml
cirrina/contributing/: index.html
cirrina/runtime-system/: index.html
csm-specifications/action/: index.html
csm-specifications/background/: index.html
csm-specifications/collaborative-state-machine/: index.html
csm-specifications/data/: index.html
csm-specifications/data-model/: index.html
csm-specifications/event/: index.html
csm-specifications/execution-model/: index.html
csm-specifications/expression/: index.html
csm-specifications/guard/: index.html
csm-specifications/specifications/: index.html
csm-specifications/state/: index.html
csm-specifications/state-machine/: index.html
csm-specifications/transition/: index.html
csm-specifications/version/: index.html
csm/examples/: index.html
develop/contributing/: index.html
develop/runtime-system/: index.html
docs/: .nav.yml  getting-started.md  index.md
docs/cirrina/: contributing.md  runtime-system.md
docs/csm/: examples.md
docs/csm-specifications/: action.md  background.md  collaborative-state-machine.md  data-model.md  data.md  event.md  execution-model.md  expression.md  guard.md  specifications.md  state-machine.md  state.md  transition.md  version.md
docs/develop/: contributing.md  runtime-system.md
docs/learn/: examples.md  getting-started.md  tutorial.md
docs/research/: publications.md  team.md
getting-started/: index.html
learn/examples/: index.html
search/: search_index.json
(+5 files in other folders)
