[tool.poetry]
name = "csm.github.io"
version = "0.1.0"
description = ""
authors = ["Marlon Etheredge <marlon.etheredge@uibk.ac.at>"]

[tool.poetry.dependencies]
python = "^3.13"
mkdocs = "^1.6"
mkdocs-shadcn = "^0.9.2"
mkdocs-bibtex = "^4.4.0"
mkdocs-print-site-plugin = "^2.8"
mkdocs-autorefs = "^1.4.3"
mkdocs-material = "^9.6.18"
mkdocs-awesome-nav = "^3.1.2"
mkdocs-git-authors-plugin = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
